--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -32,7 +32,7 @@ param_ports:
 
 # changelog
 changelogs:
-  - { date: "25.08.23:", desc: "Rebase to Alpine 3.18, deprecate armhf." }
+  - { date: "25.08.23:", desc: "Rebase to Alpine 3.18, pin Pillow to 9.5.0." }
   - { date: "25.03.23:", desc: "Add requests_oauthlib required for [beatport plugin](https://beets.readthedocs.io/en/stable/plugins/beatport.html)." }
   - { date: "24.12.22:", desc: "Rebase to Alpine 3.17, migrate to s6v3, install chromaprint from Alpine repos, add beetcamp plugin." }
   - { date: "15.01.22:", desc: "Rebase to Alpine 3.15." }
