--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -28,7 +28,7 @@ param_ports:
   - {external_port: "8337", internal_port: "8337", port_desc: "Application WebUI"}
 # changelog
 changelogs:
-  - {date: "25.08.23:", desc: "Rebase to Alpine 3.18, pin Pillow to 9.5.0."}
+  - {date: "25.08.23:", desc: "Rebase to Alpine 3.18, switch from Pillow to Imagemagick."}
   - {date: "03.07.23:", desc: "Deprecate armhf. As announced [here](https://www.linuxserver.io/blog/a-farewell-to-arm-hf)"}
   - {date: "25.03.23:", desc: "Add requests_oauthlib required for [beatport plugin](https://beets.readthedocs.io/en/stable/plugins/beatport.html)."}
   - {date: "24.12.22:", desc: "Rebase to Alpine 3.17, migrate to s6v3, install chromaprint from Alpine repos, add beetcamp plugin."}
