--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -6,6 +6,7 @@ project_url: "http://beets.io/"
 project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/beets-icon.png"
 project_blurb: "[{{ project_name|capitalize }}]({{ project_url }}) is a music library manager and not, for the most part, a music player. It does include a simple player plugin and an experimental Web-based player, but it generally leaves actual sound-reproduction to specialized tools."
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
+project_categories: "Music"
 project_blurb_optional_extras_enabled: false
 project_blurb_optional_extras: []
 # supported architectures
