--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.19
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.20
 
 # set version label
 ARG BUILD_DATE
@@ -87,9 +87,9 @@ RUN \
     wheel && \
   echo "**** install beets ****" && \
   cd /tmp/beets && \
-  pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.19/ . && \
+  pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.20/ . && \
   echo "**** install pip packages ****" && \
-  pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.19/ \
+  pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.20/ \
     beautifulsoup4 \
     beets-extrafiles \
     beetcamp \
@@ -101,6 +101,7 @@ RUN \
     requests \
     requests_oauthlib \
     unidecode && \
+  printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
   echo "**** cleanup ****" && \
   apk del --purge \
     build-dependencies && \
