--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,7 +6,6 @@ external_type: github_commit
 release_type: prerelease
 release_tag: nightly
 ls_branch: nightly
-build_armhf: false
 repo_vars:
   - BUILD_VERSION_ARG = 'BEETS_VERSION'
   - EXT_GIT_BRANCH = 'master'
@@ -25,6 +24,6 @@ repo_vars:
   - CI_PORT='8337'
   - CI_SSL='false'
   - CI_DELAY='120'
-  - CI_DOCKERENV='TZ=US/Pacific'
-  - CI_AUTH='user:password'
+  - CI_DOCKERENV=''
+  - CI_AUTH=''
   - CI_WEBPATH=''
