--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,7 +6,6 @@ external_type: pip_version
 release_type: stable
 release_tag: latest
 ls_branch: master
-build_armhf: false
 repo_vars:
   - BUILD_VERSION_ARG = 'BEETS_VERSION'
   - EXT_PIP='beets'
@@ -23,6 +22,6 @@ repo_vars:
   - CI_PORT='8337'
   - CI_SSL='false'
   - CI_DELAY='120'
-  - CI_DOCKERENV='TZ=US/Pacific'
-  - CI_AUTH='user:password'
+  - CI_DOCKERENV=''
+  - CI_AUTH=''
   - CI_WEBPATH=''
