--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -21,6 +21,8 @@ param_volumes:
 param_usage_include_ports: true
 param_ports:
   - {external_port: "8337", internal_port: "8337", port_desc: "Application WebUI"}
+readonly_supported: true
+nonroot_supported: true
 # init diagram
 init_diagram: |
   "beets:nightly": {
@@ -65,6 +67,7 @@ init_diagram: |
   "beets:nightly" <- Base Images
 # changelog
 changelogs:
+  - {date: "28.08.24:", desc: "Rebase to Alpine 3.21, unpin beetcamp."}
   - {date: "22.10.24:", desc: "Pin beetcamp to 0.19.2 until upstream requirements fixed."}
   - {date: "01.10.24:", desc: "Add packages required for Discogs plugin."}
   - {date: "28.08.24:", desc: "Rebase to Alpine 3.20."}
