--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -27,6 +27,8 @@ param_volumes:
 param_usage_include_ports: true
 param_ports:
   - {external_port: "8337", internal_port: "8337", port_desc: "Application WebUI"}
+readonly_supported: true
+nonroot_supported: true
 # application setup block
 app_setup_block_enabled: true
 app_setup_block: |
@@ -83,6 +85,7 @@ init_diagram: |
   "beets:latest" <- Base Images
 # changelog
 changelogs:
+  - {date: "27.01.25:", desc: "Rebase to Alpine 3.21."}
   - {date: "01.10.24:", desc: "Add packages required for Discogs plugin."}
   - {date: "28.08.24:", desc: "Rebase to Alpine 3.20, switch from Pillow to Imagemagick."}
   - {date: "23.12.23:", desc: "Rebase to Alpine 3.19."}
