fix: Addded flask-cors

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -83,6 +83,7 @@ RUN \
     beetcamp \
     python3-discogs-client \
     flask \
+    flask-cors \
     PyGObject \
     pyacoustid \
     pylast \
