forgot the aarch64 version :p

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -89,7 +89,8 @@ RUN \
     requests \
     requests_oauthlib \
     typing-extensions \
-    unidecode && \
+    unidecode \
+    drop2beets && \
   printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
   echo "**** cleanup ****" && \
   apk del --purge \
@@ -103,6 +104,8 @@ RUN \
 ENV BEETSDIR="/config" \
 EDITOR="nano" \
 HOME="/config"
+
+RUN mkdir /downloads #it doesn't start without this :/
 
 # copy local files
 COPY root/ /
